Fixin user registration, making sure uppercase and lowercase emails are treated equally
